--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Welcome to FlectrosMod!</title>
+    <title>Welcome to AnimalPro!</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
@@ -17,12 +17,12 @@
   </head>
   <body>
     <h1>
-      FlectrosMod
+      AnimalPro
     </h1>
-    <p>This is my mod that adds super cool things to the game. It will never die. Nope, never. The server won't constantly break down, stopping every player who's downloaded it from playing the game with disabling it first. nah, not happening. couldn't ever POSSIBLY HAPPEN. NEVER EVER COULD THAT POSSIBLE HAPPEN TO THIS APPLICATION. NOOOOOPE. IT'S LITERALLY IMPOSSIBLE FOR THIS TO DIE AND FAIL. ITS WAY TO BIG TO FAIL saidfhasdifhkasjdkfhjdksgjhdsfkjgnsdfkljgnsdkfjngsdlfjgn</p>
+    <p>This is an example project to showcase the functionality of CTFAuth</p>
   
     <p>
-      anyways what's your favorite animal?
+      what's your favorite animal?
     </p>
     <input id="animalText" type="text">
     <button id="verifyBtn">Verify</button>
